--- a/templates/project_name/layout.html
+++ b/templates/project_name/layout.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#home">PROJECT NAME</a>
+          <a class="navbar-brand" href="#">PROJECT NAME</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -49,9 +49,9 @@
                 <li class=""><a class="nav-link" href="{% url 'app_name:category' category.slug %}">{{ category.name|capfirst }}</a></li>
               {% endfor %}
             {% else %}
-              <li class=""><a class="nav-link" href="#home">Home</a></li>
-              <li class=""><a class="nav-link" href="#about">About</a></li>
-              <li class=""><a class="nav-link" href="#contact">Contact</a></li>
+              <li class=""><a class="nav-link" href="#home" onclick="window.location.reload(true);">Home</a></li>
+              <li class=""><a class="nav-link" href="#about" onclick="window.location.reload(true);">About</a></li>
+              <li class=""><a class="nav-link" href="#contact" onclick="window.location.reload(true);">Contact</a></li>
             {% endif %}
           </ul>
         </div>
