--- a/templates/global/layout.html
+++ b/templates/global/layout.html
@@ -20,7 +20,7 @@
 
       <!-- Extra app level stylesheets -->
       {% block app_stylesheets %}
-      {% enblock app_stylesheets %}
+      {% endblock app_stylesheets %}
 
       <!-- Extra styling per template -->
       {% block style %}
