static bug fixes

--- a/templates/global/layout.html
+++ b/templates/global/layout.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="">
       <meta name="author" content="">
-      <link rel="icon" href="{% static 'pencil_icon.ico' %}">
+      <link rel="icon" href="{% static 'global/pencil_icon.ico' %}">
 
       <title>{% block title %}PROJECT NAME{% endblock title %}</title>
 
@@ -16,7 +16,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
 
       <!-- PROJECT NAME stylesheet -->
-      <link href="{% static 'project_name/style.css' %}" rel="stylesheet">
+      <link href="{% static 'global/style.css' %}" rel="stylesheet">
 
       <!-- Extra app level stylesheets -->
       {% block app_stylesheets %}
